<resources>
    <string name="app_name">IoT Pitmaster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IoT Pitmaster</string>
    <string name="nav_header_subtitle">ECEN 403 - Spring 2021 - Team 16</string>
    <string name="nav_header_desc">Autonomous BBQ Smoker</string>
    <string name="action_help">Help</string>

    <string name="menu_auto">Autonomous</string>
    <string name="menu_manual">Manual</string>
    <string name="menu_settings">Settings</string>

    <string name="manual_header">Manual Mode</string>
    <string name="auto_header">Autonomous Mode</string>
    <string name="chamber_temperature">Chamber Temperature</string>
    <string name="cook_temperature">Cook Temperature</string>
    <string name="cook_temperature_left">Cook Temperature Left</string>
    <string name="cook_temperature_right">Cook Temperature Right</string>
    <string name="fuel_button">Dispense Fuel</string>
    <string name="open_vent">Open Damper</string>
    <string name="close_vent">Close Damper</string>
    <string name="blow_fan">Blow Fan</string>
    <string name="damper">Damper</string>
    <string name="hopper">Hopper</string>
    <string name="set_cook_temp">Set Cook Temperature</string>
    <string name="set_chamber_temp">Set Chamber Temperature</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="open_bluetooth">Open Bluetooth settings</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="temperature_settings">Temperature Units</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>