<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#500000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/manual_header"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/chamber_temp_man"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:text="@string/chamber_temperature"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cook_temp_man_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:text="@string/cook_temperature_left"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cook_temp_man_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cook_temperature_right"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/chamber_temperature_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N/A"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cook_temperature_manual_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N/A"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cook_temperature_manual_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N/A"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/chamberSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendDispenseFuel"
        android:text="@string/fuel_button"
        android:textColor="@color/white"
        app:backgroundTint="@color/black" />

    <Button
        android:id="@+id/cookSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendOpenDamper"
        android:text="@string/open_vent"
        android:textColor="@color/white"
        app:backgroundTint="@color/black" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendCloseDamper"
        android:text="@string/close_vent"
        android:textColor="@color/white"
        app:backgroundTint="@color/black" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/blow_fan"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/blow_fan_intensity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progressTint="@color/white"
        android:thumbTint="@color/black" />

    <TextView
        android:id="@+id/blow_fan_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Blow Fan"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/damper_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/damper"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/hopper_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hopper"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp" />
</LinearLayout>