<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#500000"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/auto_header"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/auto_chamber_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:text="@string/chamber_temperature"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/auto_cook_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:text="@string/cook_temperature"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editChamberTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Enter Temperature"
                android:inputType="number"
                android:numeric="integer"
                android:textColor="@color/white"
                android:textColorHint="#878585"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editCookTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Enter Temperature"
                android:inputType="number"
                android:numeric="integer"
                android:textColor="@color/white"
                android:textColorHint="#878585"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/chamberSend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sendChamberTemperature"
                android:text="@string/set_chamber_temp"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/cookSend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sendCookTemperature"
                android:text="@string/set_cook_temp"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/chamber_temp_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chamber_temperature"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cook_temp_left_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cook_temperature_left"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cook_temp_right_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cook_temperature_right"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/blow_fan_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blow_fan"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/damper_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/damper"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/hopper_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hopper"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>