<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#500000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bluetooth"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bluetoothStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_settings"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/temp_units"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkedButton="@id/radioButtonF"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="temperatureUnits"
            android:text="@string/fahrenheit"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white"
            app:useMaterialThemeColors="false" />

        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="temperatureUnits"
            android:text="@string/celsius"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white"
            app:useMaterialThemeColors="false" />
    </RadioGroup>
</LinearLayout>